--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -69,6 +69,9 @@
       },
       "soc_set": {
         "name": "SOC Maximum"
+      },
+      "offset": {
+        "name": "Offset zero feed"
       }
     },
     "sensor": {
@@ -190,7 +193,19 @@
       },
       "remain_input_time": {
         "name": "Remaining Charge Time"
-      }
+      },
+      "soft_version": {
+        "name": "BMS Firmware"
+      },
+      "dspversion": {
+        "name": "AC Firmware"
+      },
+      "master_soft_version": {
+        "name": "Master Firmware"
+      },
+      "masterhaer_version": {
+        "name": "Hardware Version"
+	  }
     },
     "select": {
       "ac_mode": {
