--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -69,6 +69,9 @@
       },
       "soc_set": {
         "name": "SOC maximum"
+      },
+      "offset": {
+        "name": "Décalage de l'avance nulle"
       }
     },
     "sensor": {
@@ -190,7 +193,19 @@
       },
       "remain_input_time": {
         "name": "Temps de charge restant"
-      }
+      },
+      "soft_version": {
+        "name": "BMS Firmware"
+      },
+      "dspversion": {
+        "name": "AC Firmware"
+      },
+      "master_soft_version": {
+        "name": "Master Firmware"
+      },
+      "masterhaer_version": {
+        "name": "Version du matériel"
+	  }
     },
     "select": {
       "ac_mode": {
