--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -69,6 +69,9 @@
       },
       "soc_set": {
         "name": "SOC Maximaal"
+      },
+      "offset": {
+        "name": "Offset nulvoeding"
       }
     },
     "sensor": {
@@ -156,6 +159,18 @@
       "remain_input_time": {
         "name": "Resterende Laadtijd"
       }
+      "soft_version": {
+        "name": "BMS Firmware"
+      },
+      "dspversion": {
+        "name": "AC Firmware"
+      },
+      "master_soft_version": {
+        "name": "Master Firmware"
+      },
+      "masterhaer_version": {
+        "name": "Hardwareversie"
+	  }
     },
     "select": {
       "ac_mode": {
