--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -86,6 +86,15 @@
           "10": "Electricity Price"
         }
       },
+      "aggr_charge_totalk_wh": {
+        "name": "Total Charged"
+      },
+      "aggr_discharge_totalk_wh": {
+        "name": "Total Discharged"
+      },
+      "aggrSolarTotalkWh": {
+        "name": "Total Solar"
+      },
       "so_h": {
         "name": "State of health"
       },
