--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -86,6 +86,15 @@
           "10": "Elektriciteitsprijs"
         }
       },
+      "aggr_charge_totalk_wh": {
+        "name": "Total geladen"
+      },
+      "aggr_discharge_totalk_wh": {
+        "name": "Total geleverd"
+      },
+      "aggrSolarTotalkWh": {
+        "name": "Total Zonne-energie"
+      },
       "so_h": {
         "name": "Gezondheidsstatus"
       },
