Update aggr names

--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -92,7 +92,7 @@
       "aggr_discharge_totalk_wh": {
         "name": "Total geleverd"
       },
-      "aggrSolarTotalkWh": {
+      "aggr_solar_totalk_wh": {
         "name": "Total Zonne-energie"
       },
       "so_h": {
