--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -92,7 +92,7 @@
       "aggr_discharge_totalk_wh": {
         "name": "Total Discharged"
       },
-      "aggrSolarTotalkWh": {
+      "aggr_solar_totalk_wh": {
         "name": "Total Solar"
       },
       "so_h": {
