--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -86,14 +86,28 @@
           "10": "Prix de l'électricité"
         }
       },
-      "aggr_charge_totalk_wh": {
+      "aggr_charge_total": {
         "name": "Total Charged"
       },
-      "aggr_discharge_totalk_wh": {
+      "aggr_discharge_total": {
         "name": "Total Discharged"
       },
-      "aggr_solar_totalk_wh": {
+      "aggr_solar_total": {
         "name": "Total Solar"
+      },
+      "mqtt_reset": {
+        "name": "Reset MQTT Connection"
+      },
+      "mqtt_status": {
+        "name": "MQTT Status",
+        "state": {
+          "0": "Inconnu",
+          "1": "Inconnu et BLE",
+          "2": "Connecté localement",
+          "3": "Connecté localement et BLE",
+          "4": "Connecté avec Zendure",
+          "5": "Connecté avec Zendure et BLE"
+        }
       },
       "so_h": {
         "name": "État de santé"
