--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -79,10 +79,10 @@
         "name": "Battery Program",
         "state": {
           "0": "None",
-          "6": "Battery priority mode",
-          "7": "Appointment mode",
+          "6": "Battery Priority Mode",
+          "7": "Appointment Mode",
           "8": "Smart Matching Mode",
-          "9": "Smart CT mode",
+          "9": "Smart CT Mode",
           "10": "Electricity Price"
         }
       },
@@ -217,8 +217,8 @@
       "ac_mode": {
         "name": "AC Operation Mode",
         "state": {
-          "input": "AC Input mode",
-          "output": "AC output mode"
+          "input": "AC Input Mode",
+          "output": "AC Output Mode"
         }
       },
       "cluster": {
