--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -102,11 +102,14 @@
         "name": "MQTT Status",
         "state": {
           "0": "Onbekend",
-          "1": "Onbekend en BLE",
-          "2": "Lokaal verbonden",
-          "3": "Lokaal verbonden en BLE",
-          "4": "Verbonden met Zendure",
-          "5": "Verbonden met Zendure en BLE"
+          "1": "BLE",
+          "2": "Lokale MQTT",
+          "3": "Lokale MQTT en BLE",
+          "4": "Zendure Cloud",
+          "5": "Zendure Cloud en BLE",
+          "9": "Zendure App and BLE",
+          "10": "Lokale Mqtt, Zendure App",
+          "11": "Lokale Mqtt, Zendure App en BLE"
         }
       },
       "so_h": {
