--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -109,7 +109,8 @@
           "5": "Zendure Cloud en BLE",
           "9": "Zendure App and BLE",
           "10": "Lokale Mqtt, Zendure App",
-          "11": "Lokale Mqtt, Zendure App en BLE"
+          "11": "Lokale Mqtt, Zendure App en BLE",
+          "16": "BLE Fout"
         }
       },
       "so_h": {
