--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -107,6 +107,7 @@
           "3": "lokal MQTT und BLE",
           "4": "Zendure Cloud",
           "5": "Zendure Cloud und BLE",
+          "8": "Zendure App",
           "9": "Zendure App und BLE",
           "10": "Lokal Mqtt und Zendure App",
           "11": "Lokal Mqtt, Zendure App und BLE",
