--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -107,6 +107,7 @@
           "3": "Local MQTT et BLE",
           "4": "Zendure Cloud",
           "5": "Zendure Cloud et BLE",
+          "8": "Zendure App",
           "9": "Zendure App et BLE",
           "10": "Lokal Mqtt et Zendure App",
           "11": "Lolal Mqtt, Zendure App et BLE",
