--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -109,8 +109,8 @@
           "5": "Zendure Cloud et BLE",
           "8": "Zendure App",
           "9": "Zendure App et BLE",
-          "10": "Lokal Mqtt et Zendure App",
-          "11": "Lolal Mqtt, Zendure App et BLE",
+          "10": "Local Mqtt et Zendure App",
+          "11": "Local Mqtt, Zendure App et BLE",
           "16": "BLE Error"
         }
       },
