--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -112,10 +112,10 @@
           "10": "Local Mqtt et Zendure App",
           "11": "Local Mqtt, Zendure App et BLE",
           "16": "Erreur BLE",
-          "18": "lokal MQTT et Erreur BLE",
+          "18": "local MQTT et Erreur BLE",
           "20": "Zendure Cloud et Erreur BLE",
           "24": "Zendure App et Erreur BLE",
-          "26": "Lokal Mqtt, Zendure App et Erreur BLE"
+          "26": "Local Mqtt, Zendure App et Erreur BLE"
         }
       },
       "so_h": {
