typo: "Lokal" to "Local"

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -112,10 +112,10 @@
           "10": "Local Mqtt, Zendure App",
           "11": "Local Mqtt, Zendure App and BLE",
           "16": "BLE Error",
-          "18": "lokal MQTT and BLE Error",
+          "18": "Local MQTT and BLE Error",
           "20": "Zendure Cloud and BLE Error",
           "24": "Zendure App and BLE Error",
-          "26": "Lokal Mqtt, Zendure App and BLE Error"
+          "26": "Local Mqtt, Zendure App and BLE Error"
         }
       },
       "so_h": {
