--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -12,22 +12,26 @@
     "step": {
       "user": {
         "data": {
+          "beta": "Use Beta API",
           "username": "Zendure Username",
           "password": "Zendure Password",
           "p1meter": "P1 Sensor for smart matching",
           "mqttlocal": "Use local MQTT",
           "mqttlog": "Log MQTT communication",
+          "mqttextra": "Use Advanced MQTT features",
           "wifissid": "Wifi SSID",
           "wifipsw": "Wifi Password"
         }
       },
       "reconfigure": {
         "data": {
+          "beta": "Use Beta API",
           "username": "Zendure Username",
           "password": "Zendure Password",
           "p1meter": "P1 Sensor for smart matching",
           "mqttlocal": "Use local MQTT",
           "mqttlog": "Log MQTT communication",
+          "mqttextra": "Use Advanced MQTT features",
           "wifissid": "Wifi SSID",
           "wifipsw": "Wifi Password"
         }
@@ -112,10 +116,10 @@
           "10": "Local Mqtt, Zendure App",
           "11": "Local Mqtt, Zendure App and BLE",
           "16": "BLE Error",
-          "18": "Local MQTT and BLE Error",
+          "18": "lokal MQTT and BLE Error",
           "20": "Zendure Cloud and BLE Error",
           "24": "Zendure App and BLE Error",
-          "26": "Local Mqtt, Zendure App and BLE Error"
+          "26": "Lokal Mqtt, Zendure App and BLE Error"
         }
       },
       "so_h": {
@@ -221,7 +225,7 @@
         "name": "Remaining Discharge Time"
       },
       "remain_input_time": {
-        "name": "Remaining Charge Time"
+        "name": "Remaining Charge Time!!"
       },
       "soft_version": {
         "name": "BMS Firmware"
