--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -218,7 +218,7 @@
         "name": "Battery Input"
       },
       "hyper_tmp": {
-        "name": "Hyper Temperature"
+        "name": "Device Temperature"
       },
       "strength": {
         "name": "Wifi Signal Strength"
