--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -255,7 +255,7 @@
           "cluster800": "Cluster max. 800 W",
           "cluster1200": "Cluster max. 1200 W",
           "cluster2400": "Cluster max. 2400 W",
-          "cluster3600": "Cluster max. 3600w"
+          "cluster3600": "Cluster max. 3600 W"
         }
       },
       "operation": {
