Refactor config flow + __init add local mqtt

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -293,5 +293,13 @@
         "name": "Led"
       }
     }
+  },
+  "exceptions": {
+    "no_zendure_token": {
+      "message": "Zendure token not provided."
+    },
+    "no_user_password": {
+      "message": "Username or password not provided."
+    }
   }
 }
