Enhance Zendure integration: update config entry options and improve option descriptions

--- a/custom_components/zendure_ha/translations/en.json
+++ b/custom_components/zendure_ha/translations/en.json
@@ -44,7 +44,8 @@
     "step": {
       "init": {
         "data": {
-          "scan_interval": "Scan Interval (seconds)"
+          "p1meter": "P1 Sensor for smart matching",
+          "mqttlog": "Log MQTT communication"
         },
         "description": "Amend your options.",
         "title": "Zendure Integration Options"
