--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -101,21 +101,10 @@
       "connection_status": {
         "name": "Connection Status",
         "state": {
-          "0": "Inconnu",
-          "1": "Inconnu et BLE",
-          "2": "Local MQTT",
-          "3": "Local MQTT et BLE",
-          "4": "Zendure Cloud",
-          "5": "Zendure Cloud et BLE",
-          "8": "Zendure App",
-          "9": "Zendure App et BLE",
-          "10": "Local Mqtt et Zendure App",
-          "11": "Local Mqtt, Zendure App et BLE",
-          "16": "Erreur BLE",
-          "18": "local MQTT et Erreur BLE",
-          "20": "Zendure Cloud et Erreur BLE",
-          "24": "Zendure App et Erreur BLE",
-          "26": "Local Mqtt, Zendure App et Erreur BLE"
+          "0": "Unknown",
+          "1": "Connected",
+          "2": "HEMS",
+          "3": "No groupe de fusibles"
         }
       },
       "so_h": {
@@ -244,15 +233,15 @@
           "output": "Mode sortie AC"
         }
       },
-      "cluster": {
-        "name": "Regroupement des appareils",
+      "fuse_group": {
+        "name": "groupe de fusibles des appareils",
         "state": {
-          "clusterunknown": "Configuration de cluster inconnue, veuillez vérifier !!",
-          "clusterowncircuit": "L'appareil a son propre circuit ou phase",
-          "cluster800": "Cluster max. 800 W",
-          "cluster1200": "Cluster max. 1200 W",
-          "cluster2400": "Cluster max. 2400 W",
-          "cluster3600": "Cluster max. 3600 W"
+          "unused": "Unused, L'appareil n'a pas de groupe de fusibles",
+          "owncircuit": "L'appareil a son propre circuit ou phase",
+          "group800": "groupe de fusibles max. 800 W",
+          "group1200": "groupe de fusibles max. 1200 W",
+          "group2400": "groupe de fusibles max. 2400 W",
+          "group3600": "groupe de fusibles max. 3600 W"
         }
       },
       "operation": {
