Add available power + modify distribution

--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -80,6 +80,9 @@
       "ambient_light_color": {
         "name": "Ambient Lichtfarbe"
       },
+      "available_kwh": {
+        "name": "Verfügbare Energie"
+      },
       "auto_model": {
         "name": "Hyper Energy Programm",
         "state": {
