--- a/custom_components/zendure_ha/translations/nl.json
+++ b/custom_components/zendure_ha/translations/nl.json
@@ -75,6 +75,9 @@
       "ambient_light_color": {
         "name": "Omgevingslichtkleur"
       },
+      "available_kwh": {
+        "name": "Beschikbare Energie"
+      },
       "auto_model": {
         "name": "Batterijprogramma",
         "state": {
