--- a/custom_components/zendure_ha/translations/de.json
+++ b/custom_components/zendure_ha/translations/de.json
@@ -251,6 +251,7 @@
           "owncircuit": "Gerät hat einen eigenen Stromkreis oder eine eigene Phase",
           "group800": "Sicherungsgruppe max. 800 W",
           "group1200": "Sicherungsgruppe max. 1200 W",
+          "group2000": "Sicherungsgruppe max. 2000 W",
           "group2400": "Sicherungsgruppe max. 2400 W",
           "group3600": "Sicherungsgruppe max. 3600 W"
         }
