--- a/custom_components/zendure_ha/translations/fr.json
+++ b/custom_components/zendure_ha/translations/fr.json
@@ -46,6 +46,11 @@
     }
   },
   "entity": {
+    "button": {
+      "mqtt_reset": {
+        "name": "Reset connection"
+      }
+    },
     "binary_sensor": {
       "master_switch": {
         "name": "Interrupteur principal"
@@ -97,9 +102,6 @@
       },
       "aggr_solar_total": {
         "name": "Total Solar"
-      },
-      "mqtt_reset": {
-        "name": "Reset MQTT Connection"
       },
       "connection_status": {
         "name": "Connection Status",
